# FlightFinderMCP

./: .env.example  .gitignore  AGENTS.md  README.md  REPOSITORY_SETTINGS.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/flight_finder/: __init__.py
src/flight_finder/application/: __init__.py
src/flight_finder/application/dtos/: __init__.py  flight_dtos.py  provider_dtos.py
src/flight_finder/application/interfaces/: __init__.py
src/flight_finder/application/use_cases/: __init__.py  filter_flights.py  get_recommendations.py  manage_cache.py  search_flights.py
src/flight_finder/config/: __init__.py  logging_config.py  settings.py
src/flight_finder/domain/: __init__.py
src/flight_finder/domain/common/: __init__.py  result.py
src/flight_finder/domain/entities/: __init__.py  flight.py  search_criteria.py
src/flight_finder/domain/errors/: __init__.py  domain_errors.py
src/flight_finder/domain/protocols/: __init__.py  cache_strategy.py  flight_provider.py  logger.py
src/flight_finder/domain/services/: __init__.py
src/flight_finder/domain/value_objects/: __init__.py  airport.py  cabin_class.py  date_range.py  passenger_config.py  price.py
src/flight_finder/infrastructure/cache/: __init__.py  cache_key_generator.py  in_memory_cache.py
src/flight_finder/infrastructure/http/: __init__.py  async_http_client.py  rate_limiter.py  retry_config.py
src/flight_finder/infrastructure/providers/: __init__.py  base_provider.py  cache_decorator.py  multi_provider_aggregator.py  provider_factory.py  provider_registry.py
src/flight_finder/infrastructure/providers/google_flights/: __init__.py  constants.py  google_flights_provider.py  response_mapper.py  searchapi_client.py  time_parser.py
src/flight_finder/infrastructure/providers/kiwi/: __init__.py  api_client.py  constants.py  kiwi_provider.py  response_mapper.py
src/flight_finder/infrastructure/providers/rapidapi_skyscanner/: __init__.py  api_client.py  constants.py  rapidapi_provider.py  response_mapper.py
src/flight_finder/infrastructure/providers/skyscanner/: __init__.py  api_client.py  constants.py  response_mapper.py  skyscanner_provider.py
src/flight_finder/presentation/: __init__.py  server.py
src/flight_finder/presentation/handlers/: __init__.py  cache_handler.py  search_handler.py
src/flight_finder/presentation/schemas/: __init__.py  converters.py  requests.py  responses.py
src/flight_finder/presentation/tools/: __init__.py
src/flight_finder/presentation/utils/: __init__.py  error_formatter.py
tests/: __init__.py  conftest.py
tests/domain/: test_airport.py  test_cabin_class.py  test_date_range.py  test_flight.py  test_passenger_config.py  test_price.py  test_result.py  test_search_criteria.py
tests/infrastructure/cache/: test_cache_key_generator.py  test_in_memory_cache.py
tests/infrastructure/http/: test_async_http_client.py  test_rate_limiter.py
tests/infrastructure/providers/: run_provider_tests.py  test_base_provider.py  test_cache_decorator.py  test_multi_provider_aggregator.py  test_provider_factory.py  test_provider_registry.py
tests/infrastructure/providers/google_flights/: test_time_parser.py
tests/infrastructure/providers/skyscanner/: test_api_client.py  test_response_mapper.py  test_skyscanner_provider.py
tests/infrastructure/providers/skyscanner/fixtures/: api_response.json
tests/integration/: __init__.py
tests/unit/: test_config.py
